--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "material-ui": "^0.20.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,6 +17,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "prop-types": "^15.6.1"
+    "prop-types": "^15.6.1",
+    "redux-devtools": "^3.4.1"
   }
 }
