--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 /.idea
+.idea
+
+.env
 
 # dependencies
 /node_modules
