--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "dotenv": "^4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
@@ -39,7 +39,6 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "resolve": "1.6.0",
-    "socket.io-client": "^2.1.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
