--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "redux-devtools": "^3.4.1",
     "sass-loader": "^7.0.1"
   },
