--- a/package.json
+++ b/package.json
@@ -100,6 +100,9 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "no-useless-escape": "off"
+    }
   }
 }
