--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-ws-chat-spa",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http:juanhb.github.io/react-redux-chat",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -25,6 +26,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gh-pages": "^2.0.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "material-ui": "^0.20.0",
@@ -51,7 +53,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy":"node scripts/gh-deploy.js"
   },
   "devDependencies": {
     "node-sass": "^4.9.0",
