--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_PUBLIC_URL=
+REACT_APP_PUBLIC_URL=/react-redux-chat
 REACT_APP_USE_INTERNAL_BOT=true
 REACT_APP_SOCKET_IO_URL=
 NODE_PATH=src/
